--- a/Portal/Portal/PortalRandkowy.SPA/src/app/app.component.html
+++ b/Portal/Portal/PortalRandkowy.SPA/src/app/app.component.html
@@ -337,7 +337,7 @@
     </svg>
 
   </div>
-
+  <app-value></app-value>
   <!-- Resources -->
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
